the example run is clean

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,32 @@ VanAexample/bmus.npy
 VanAexample/clusters
 VanAexample/projections.npy
 VanAexample/smap.npy
+clust_1.npy
+clust_10.npy
+clust_11.npy
+clust_12.npy
+clust_13.npy
+clust_14.npy
+clust_15.npy
+clust_16.npy
+clust_17.npy
+clust_18.npy
+clust_19.npy
+clust_2.npy
+clust_20.npy
+clust_21.npy
+clust_22.npy
+clust_3.npy
+clust_4.npy
+clust_5.npy
+clust_6.npy
+clust_7.npy
+clust_8.npy
+clust_9.npy
+clusters
+eigenValues.npy
+eigenVectorsList.npy
+meansList.npy
+projections.npy
+reconstruction.npy
+*.vrb
